# ChangeLog for games-util/bsp
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 May 2007; Jack Kelly (hashendgame) <weldingmaskman@hotmail.com>
  bsp-5.2.ebuild:
  Added explicit RDEPEND=${DEPEND}

  06 May 2007; Ali Polatel (hawking) <polatel@gmail.com> bsp-5.2.ebuild:
  added trailing slash to HOMEPAGE URL

  06 May 2007; Jack Kelly (hashendgame) <weldingmaskman@hotmail.com>
  +bsp-5.2.ebuild, +metadata.xml:
  New ebuild for bug 177242.
