@@ -1,4 +1,4 @@
 DIST bsp-5.2.tar.bz2 162768 RMD160 8e2e2ed8576a250537f90daa42c25fdd0a3b9aaf SHA1 52af16dfa28c7838d9503a9153d93bfa031ac169 SHA256 641c4350fd620d485e874dc9e504e6feeb6f44272be50f8622c97cbe396bc00e
-EBUILD bsp-5.2.ebuild 1650 RMD160 7db8e498273e74ce1a4424e7effbc5c371ac20b9 SHA1 dc5d9aab7f1a8dc0ae5de3e2ebca37169b003f21 SHA256 2b31275844c4afb358237bdc69b602be14f3c746e8eebbb7c9f56f8157ff9d4e
-MISC ChangeLog 484 RMD160 95f151d1e45bc0217d588f1112d1d8ff487aa9a4 SHA1 377b30f56f954b4715518cb5aebcf2ecce60d751 SHA256 8c2f0248541b93ec5904e10a7d27edcd56571064a02d52328c248fb50d647dd5
+EBUILD bsp-5.2.ebuild 1401 RMD160 5ad51359549f69bee3bac3534f3551c2e25f1266 SHA1 dd07b546e4105d131db75c3e367d04a929e20a7a SHA256 4da049c548702a189ee08f7cef58d307367e6301556361ad45b77bfcc8872aaa
+MISC ChangeLog 760 RMD160 cb977ee7b7c78dcc3564dfe529e318d5e6601d97 SHA1 b2cf9af91c870a09d65fc5411c998c72baafa564 SHA256 539b4334ddeba091ce49a8faaa0b964ee86cc79a4112e728dbb60fee6df221c0
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
