@@ -1,6 +1,11 @@
 # ChangeLog for games-util/bsp
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  26 Jan 2008; Jakub Moc <jakub@gentoo.org> bsp-5.2.ebuild:
+  Remove redundant die on eautoreconf; also remove filter-flags - is not
+  intended for working around user stupidity. If someone selects flags that
+  conflict with debugging/profiling, it is not an ebuild problem.
 
   07 May 2007; Jack Kelly (hashendgame) <weldingmaskman@hotmail.com>
   bsp-5.2.ebuild:
